--- a/css/index.css
+++ b/css/index.css
@@ -1,22 +1,37 @@
 /* global */
-*{
+
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box
 }
-html,body{
+
+html,
+body {
     font-size: 10px;
     font-family: inherit;
 }
-header, section, footer, aside, nav, main, article, figure {
+
+header,
+section,
+footer,
+aside,
+nav,
+main,
+article,
+figure {
     display: block;
 }
+
+
 /* header */
-.header{
+
+.header {
     background-color: #4267B2;
     color: white;
     font-size: 1.8rem;
 }
+
 .header__content {
     display: flex;
     justify-content: space-between;
@@ -25,30 +40,36 @@ header, section, footer, aside, nav, main, article, figure {
     width: 71%;
     margin: 0 auto
 }
+
 .header ul {
     list-style: none;
     display: flex;
-
 }
+
 .header ul li a {
     text-decoration: none;
     color: white;
     margin: 2.5rem
 }
+
+
 /* navbar */
-.navbar{
+
+.navbar {
     font-size: 1.8rem;
     color: white;
     background-color: #2b5aba;
     padding: 3rem 0;
 }
-.navbar__content{
+
+.navbar__content {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 75%;
     margin: 0 auto;
 }
+
 .navbar ul {
     list-style: none;
     display: flex;
@@ -56,46 +77,62 @@ header, section, footer, aside, nav, main, article, figure {
     align-items: center;
     padding-right: 235px;
 }
-.navbar ul li a{
+
+.navbar ul li a {
     text-decoration: none;
     color: white;
     margin: 2rem;
 }
+
+
 /* carousel */
-.carousel img{
+
+.carousel img {
     width: 100%;
 }
+
+
 /* advertisement */
-.advertisement__content{
+
+.advertisement__content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 87%;
     margin: 0 auto;
-    padding: 5rem 0;
+    margin-top: 5rem
 }
-.advertisement img{
+
+.advertisement img {
     width: 100%;
+    display: block
 }
-.advertisement__right{
+
+.advertisement__right {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 1.5rem
 }
-.advertisement__items img{
+
+.advertisement__items img {
     height: 31rem
 }
-.advertisement__img2{
+
+.advertisement__img2 {
     grid-column: 1 / span 2;
 }
+
+
 /* products*/
-.products h2{
+
+.products h2 {
     text-align: center;
     font-size: 3rem;
-    padding: 50px 0;
+    padding: 5rem 0;
     color: #2b5aba
 }
-.products__content{
+
+.products__content {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -104,24 +141,30 @@ header, section, footer, aside, nav, main, article, figure {
     width: 87%;
     margin: 0 auto;
 }
-.products__items{
+
+.products__items {
     border: solid 0.1rem #b69393;
     box-shadow: 5px 5px 5px #666;
     -moz-box-shadow: 5px 5px 5px #666;
     -webkit-box-shadow: 5px 5px 5px #666;
     height: 55.5rem;
 }
-.products__items p{
+
+.products__items p {
     padding-top: 1rem
 }
-.products__items button{
+
+.products__items button {
     padding: 1rem;
     border: solid 0.2rem orange;
     margin-top: 0.5rem;
     cursor: pointer
 }
+
+
 /* banner */
-.banner{
+
+.banner {
     background-image: url("../img/ban1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -135,41 +178,50 @@ header, section, footer, aside, nav, main, article, figure {
     color: white;
     position: relative;
 }
-.banner__content{
+
+.banner__content {
     width: 100%
 }
-.banner__p1{
+
+.banner__p1 {
     font-size: 4rem
 }
-.banner__p2{
+
+.banner__p2 {
     font-size: 6rem;
     margin-top: 4rem
 }
-.banner__content button{
-    padding: 1rem ;
+
+.banner__content button {
+    padding: 1rem;
     color: white;
     background-color: orange;
     border: none;
     margin-top: 4rem;
     cursor: pointer;
 }
-.banner__line::after{
+
+.banner__line::after {
     content: '';
     display: block;
     width: 100%;
-   background-color: rgba(255, 255,255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);
     height: 0.1rem;
     position: absolute;
     top: 25rem
 }
+
+
 /* arrivals */
-.arrivals h2{
+
+.arrivals h2 {
     text-align: center;
     font-size: 3rem;
     padding: 50px 0;
     color: #2b5aba
 }
-.arrivals__content{
+
+.arrivals__content {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -178,37 +230,45 @@ header, section, footer, aside, nav, main, article, figure {
     width: 87%;
     margin: 0 auto;
 }
-.arrivals__items{
+
+.arrivals__items {
     border: solid 0.1rem #b69393;
     box-shadow: 5px 5px 5px #666;
     -moz-box-shadow: 5px 5px 5px #666;
     -webkit-box-shadow: 5px 5px 5px #666;
     height: 55.5rem;
 }
-.arrivals__items p{
+
+.arrivals__items p {
     padding-top: 1rem
 }
-.arrivals__items button{
+
+.arrivals__items button {
     padding: 1rem;
     border: solid 0.2rem orange;
     margin-top: 0.5rem;
     cursor: pointer
 }
+
+
 /* trends */
-.trends{
+
+.trends {
     background-color: #f6f6f6;
     margin-top: 5rem;
     position: relative;
 }
-.trends h2{
+
+.trends h2 {
     text-align: center;
     font-size: 3rem;
     padding: 5rem 0;
     color: #2b5aba
 }
-.trends__content{
+
+.trends__content {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 1.5rem;
     width: 87%;
     margin: 0 auto;
@@ -216,16 +276,21 @@ header, section, footer, aside, nav, main, article, figure {
     color: white;
     font-size: 1.8rem
 }
-.trends__content img{
+
+.trends__content img {
     width: 100%
 }
-.trends__items{
+
+.trends__items {
     position: relative;
 }
-.trends__circle , .trends__bg{
+
+.trends__circle,
+.trends__bg {
     position: absolute;
-} 
-.trends__circle{
+}
+
+.trends__circle {
     top: 1rem;
     right: 1rem;
     background-color: #2b5aba;
@@ -233,19 +298,22 @@ header, section, footer, aside, nav, main, article, figure {
     width: 4.5rem;
     height: 4.5rem;
 }
-.trends__circle p{
+
+.trends__circle p {
     line-height: 4.5rem
 }
-.trends__bg{
+
+.trends__bg {
     display: flex;
     justify-content: space-around;
-    align-items: center ;
-    background-color: rgba(43, 90, 186,0.6);
+    align-items: center;
+    background-color: rgba(43, 90, 186, 0.6);
     height: 5rem;
     width: 100%;
     bottom: 0.7rem;
 }
-.trends__line::after{
+
+.trends__line::after {
     content: '';
     display: block;
     width: 100%;
@@ -254,5 +322,67 @@ header, section, footer, aside, nav, main, article, figure {
     position: absolute;
     top: 7.2rem;
 }
-    
- 
+
+
+/* footer */
+
+.footer {
+    background-color: #4267B2;
+    font-size: 1.6rem;
+    color: white;
+    height: 30rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 5rem
+}
+
+.footer__list {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    width: 87%;
+    margin: 0 auto;
+    text-align: left;
+    grid-gap: 15px;
+    margin-top: 3rem
+}
+
+.footer__p {
+    grid-column: 1 / span 2;
+    width: 85%
+}
+
+.footer__list ul {
+    list-style: none;
+}
+
+.footer__list ul li a {
+    text-decoration: none;
+    color: white;
+}
+
+.footer__list ul li {
+    margin-top: 1.5rem;
+}
+
+.footer__items i {
+    margin-right: 1.5rem
+}
+
+
+/*  */
+
+.footer__copyright {
+    background-color: black;
+    height: 8rem;
+    margin-top: 3rem;
+}
+
+.footer__copy {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 87%;
+    margin: 0 auto;
+    line-height: 8rem
+}
